# cpp-chess

./: .gitignore  CMakeLists.txt  ChessVS.aps  ChessVS.sln  ChessVS.vcxproj  ChessVS.vcxproj.filters  MoveLogic.cpp  MoveLogic.h  README.md  board.cpp  board.h  main.cpp  main.h  movelogic.h  piece.cpp  piece.h  tile.cpp  tile.h
img/: CMakeLists.txt
include/: board.hpp  piece.hpp  tile.hpp
src/: CMakeLists.txt  board.cpp  main.cpp  piece.cpp  tile.cpp
